--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.0 (1.1.0):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.0.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.0.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.1 (1.1.1):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.1.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.1.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -350,6 +350,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.1 2024/4/22 <ul> <li>ORBISライブラリの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.0 2024/4/22 <ul> <li>ORBISライブラリを導入</li> <li>Cielの修正</li> </ul> </li>
 <li>Polaris Engine 1.0.22 2024/4/21 <ul> <li>内部的な修正</li> </ul> </li>
 <li>Polaris Engine 1.0.20 2024/4/21 <ul> <li>署名を追加</li> </ul> </li>
