--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.0 (1.1.0):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.0.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.0.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.1 (1.1.1):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.1.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.1.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.1 2024/4/22 <ul> <li>ORBISライブラリの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.0 2024/4/22 <ul> <li>Introduced ORBIS Library</li> <li>Fixed Ciel</li> </ul> </li>
 <li>Polaris Engine 1.0.22 2024/4/21 <ul> <li>Internal fixes</li> </ul> </li>
 <li>Polaris Engine 1.0.20 2024/4/21 <ul> <li>Added a code sign</li> </ul> </li>
