--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.2 (1.1.2):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.2.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.2.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.3 (1.1.3):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.3.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.3.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.3 2024/4/23 <ul> <li>Fixed a bug of gosub behaviours of CUSTOM1/2 SysMenu buttons</li> </ul> </li>
 <li>Polaris Engine 1.1.2 2024/4/23 <ul> <li>Fixed a bug of the switch command</li> <li>Deprecated usages of the switch command</li> </ul> </li>
 <li>Polaris Engine 1.1.1 2024/4/22 <ul> <li>ORBISライブラリの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.0 2024/4/22 <ul> <li>Introduced ORBIS Library</li> <li>Fixed Ciel</li> </ul> </li>
