web: fixed version extraction

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,7 +106,7 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.5 (1.1.5):<br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.5 (2024/4/24):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.5.exe">Windows版 Polaris Engine</a><br>
 <!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.5.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
@@ -195,14 +195,14 @@
 <ul>
 	<li>開発ツール
 		<ul>
-			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (Windows 11以外は32bit/64bit対応)</li>
+			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (32bit動作)</li>
 			<li>CPU: Intel/AMD/Arm64</li>
 			<li>GPU: Direct3D 9</li>
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
-			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (Windows 11以外は32bit/64bit対応)</li>
+			<li>OS: Windows 11, Windows 10, Windows 8.1, Windows 8, Windows 7, Windows Vista, Windows XP (32bit動作)</li>
 			<li>CPU: Intel/AMD/Arm64</li>
 			<li>GPU: Direct3D 9</li>
 		</ul>
@@ -240,11 +240,13 @@
 	<li>開発ツール
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
+			<li>グラフィックス: Qt6
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
+			<li>グラフィックス: X11, OpenGL 3
 		</ul>
 	</li>
 </ul>
