--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,7 +81,7 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.5 (1.1.5):<br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.5 (2024/4/24):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.5.exe">Download Polaris Engine for Windows</a><br>
 <!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.5.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.5 2024/4/24 <ul> <li>Added a twice-eye-blinking (20% probalility)</li> </ul> </li>
 <li>Polaris Engine 1.1.5 2024/4/24 <ul> <li>Added a twice-eye-blinking (20% probalility)</li> </ul> </li>
 <li>Polaris Engine 1.1.4 2024/4/24 <ul> <li>Fixed a bug where an eye-blink layer is not moved on cha/all/cl.run</li> </ul> </li>
 <li>Polaris Engine 1.1.3 2024/4/23 <ul> <li>Fixed a bug of gosub behaviours of CUSTOM1/2 SysMenu buttons</li> </ul> </li>
