--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.5 (2024/4/24):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.5.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.5.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.6 (2024/4/24):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.6.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.6.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -352,6 +352,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.6 2024/4/24 <ul> <li>カッコではじまる文章の場合、２行目をカッコの分だけ字下げするように改善</li> </ul> </li>
 <li>Polaris Engine 1.1.5 2024/4/24 <ul> <li>10回に2回程度、2回まばたきするように変更</li> </ul> </li>
 <li>Polaris Engine 1.1.4 2024/4/24 <ul> <li>cha/all/cl.runでキャラを移動したときに目パチを再設定するように修正</li> </ul> </li>
 <li>Polaris Engine 1.1.3 2024/4/23 <ul> <li>カスタム1/2ボタンのgosub動作のバグを修正</li> </ul> </li>
