--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.6 (2024/4/24):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.6.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.6.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.7 (2024/4/24):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.7.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.7.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.8 2024/4/24 <ul> <li>Added $TIME variable to the @set command</li> </ul> </li>
 <li>Polaris Engine 1.1.6 2024/4/24 <ul> <li>Added Japanese indent</li> </ul> </li>
 <li>Polaris Engine 1.1.5 2024/4/24 <ul> <li>Added a twice-eye-blinking (20% probalility)</li> </ul> </li>
 <li>Polaris Engine 1.1.5 2024/4/24 <ul> <li>Added a twice-eye-blinking (20% probalility)</li> </ul> </li>
