--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.8 (2024/4/24):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.8.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.8.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.9 (2024/4/24):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.9.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.9.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -352,6 +352,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.9 2024/4/24 <ul> <li>簡単な補完を実装</li> </ul> </li>
 <li>Polaris Engine 1.1.8 2024/4/24 <ul> <li>シナリオを保存した際にusingブロックが展開されてしまうバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.1.7 2024/4/24 <ul> <li>@set $1 = $TIME で時刻(秒)を取得できるように機能追加</li> </ul> </li>
 <li>Polaris Engine 1.1.6 2024/4/24 <ul> <li>カッコではじまる文章の場合、２行目をカッコの分だけ字下げするように改善</li> </ul> </li>
