--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.9 (2024/4/24):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.9.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.9.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.10 (2024/4/24):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.10.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.10.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.10 2024/4/24 <ul> <li>Added a config serif.quote.indent</li> </ul> </li>
 <li>Polaris Engine 1.1.9 2024/4/24 <ul> <li>Implemented a simple completion</li> </ul> </li>
 <li>Polaris Engine 1.1.8 2024/4/24 <ul> <li>Fixed a bug where using blocks are expanded</li> </ul> </li>
 <li>Polaris Engine 1.1.8 2024/4/24 <ul> <li>Added $TIME variable to the @set command</li> </ul> </li>
