--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.12 (2024/4/25):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.12.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.12.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.13 (2024/4/25):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.13.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.13.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -352,6 +352,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.13 2024/4/25 <ul> <li>タイトル画面を改変しやすいものに変更</li> </ul> </li>
 <li>Polaris Engine 1.1.12 2024/4/25 <ul> <li>カスタムシステムメニューの機能向上 (gosub-guiとgosub-backの追加、pushstageをpushstateに変更)</li> </ul> </li>
 <li>Polaris Engine 1.1.11 2024/4/24 <ul> <li>カスタムシステムメニューのGUIのglobalセクションにpushstageフラグを追加、gosub後にs2_pop_stage()で復元可能に</li> </ul> </li>
 <li>Polaris Engine 1.1.10 2024/4/24 <ul> <li>自動インデントをコンフィグ化(serif.quote.indent)</li> </ul> </li>
