--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.12 (2024/4/25):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.12.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.12.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.13 (2024/4/25):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.13.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.13.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.13 2024/4/25 <ul> <li>Replaced the title screens to simple ones</li> </ul> </li>
 <li>Polaris Engine 1.1.12 2024/4/25 <ul> <li>Improved custom sysmenu (added gosub-gui and gosub-back)</li> </ul> </li>
 <li>Polaris Engine 1.1.11 2024/4/24 <ul> <li>Added pushstage flag to the global section of GUI, made it possible to call s2_pop_stage()</li> </ul> </li>
 <li>Polaris Engine 1.1.10 2024/4/24 <ul> <li>Added a config serif.quote.indent</li> </ul> </li>
