Fixed the news command

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -118,18 +118,20 @@
 <hr>
 <br>
 
-<h4>クレジット</h4>
-<p>テンプレートゲームの作成にあたり、プロ・アマチュアを問わず、才能溢れる素晴しいクリエイタの皆様にご参加いただいております。(敬称略)</p>
+<h4>謝辞 (Special Thanks)</h4>
+<p>
+	テンプレートゲームの開発においては、プロ・アマチュアを問わず、才能にあふれた素晴しいクリエイタの皆様にご参加いただいております。ここに深謝の意を表します。(順不同・敬称略)
+</p>
 <ul>
-	<li>UI/UX
+	<li>テンプレートゲーム
 		<ul>
-			<li>デフォルト: SOrow (@sorow_fts)</li>
-			<li>縦書き小説: あさつき (@ootukasegoka)</li>
+			<li>Polaris Engine コア開発者 あさつき (@ootukasegoka)</li>
+			<li>Polaris Engine コア開発者 SOrow (@sorow_fts)</li>
 		</ul>
 	</li>
 	<li>キャラクタデザイン
 		<ul>
-			<li>みどり: ぽにこ (@gigzagu123)</li>
+			<li>ぽにこ (@gigzagu123)</li>
 		</ul>
 	</li>
 	<li>声の出演
@@ -140,49 +142,54 @@
 	</li>
 	<li>音楽
 		<ul>
-			<li>BGM: 80</li>
+			<li>80</li>
 		</ul>
 	</li>
 	<li>エフェクト
 		<ul>
-			<li>雨と雪: SOrow (@sorow_fts)</li>
+			<li>Polaris Engine コア開発者 SOrow (@sorow_fts)</li>
 		</ul>
 	</li>
 	<li>アイコン
 		<ul>
-			<li>デフォルトアイコン: 龍龍</li>
+			<li>龍龍(Ronron) (@RonronAmethyst)</li>
 		</ul>
 	</li>
-	<li>利用ライブラリ
+</ul>
+
+<h4>利用ライブラリ</h4>
+<p>
+	エクスポートされたゲームが利用しているライブラリは下記の通りです。
+	実行ファイル中にこれらの著作権情報を埋め込んでいるため、ユーザーが重ねて謝辞を書く義務はありません。
+	なお、これらのライブラリが充実したおかげで、ここ20年にフリーなゲーム開発ツールがたくさん生まれたという事情があり、ユーザーからも謝辞を書いていただければこの上なくうれしいです。
+</p>
+<ul>
+	<li>画像
 		<ul>
-			<li>画像
-				<ul>
-					<li>libpng: Copyright (C) 2000-2002, 2004, 2006-2016, Glenn Randers-Pehrson and the original authors. All rights reserved.</li>
-					<li>jpeg9: copyright (C) 1991-2022, Thomas G. Lane, Guido Vollbeding. All rights reserved.</li>
-					<li>libwebp: Copyright (C) 2010, Google Inc. All rights reserved.</li>
-				</ul>
-			</li>
-			<li>音声
-				<ul>
-					<li>libvorbis: Copyright (C) 2002-2015, Xiph.org Foundation. All rights reserved.</li>
-				</ul>
-			</li>
-			<li>フォント
-				<ul>
-					<li>FreeType2: Copyright (C) 1996-2002, 2006 by David Turner, Robert Wilhelm, and Werner Lemberg. All rights reserved.</li>
-				</ul>
-			</li>
-			<li>ogg/png/webp/woff2ファイル用の内部的な依存ライブラリ
-				<ul>
-					<li>libogg: Copyright (C) 2002, Xiph.org Foundation. All rights reserved.</li>
-					<li>zlib: Copyright (C) 1995-2013 Jean-loup Gailly and Mark Adler. All rights reserved.</li>
-					<li>bzip2: Copyright (C) 1996-2010 Julian R Seward. All rights reserved.</li>
-					<li>Brotli: Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors. All rights reserved.</li>
-				</ul>
-			</li>
-			<li>Unityエクスポートに限り、Unityを使用 (家庭用ゲーム機専用)</li>
+			<li>libpng: Copyright (C) 2000-2002, 2004, 2006-2016, Glenn Randers-Pehrson and the original authors. All rights reserved.</li>
+			<li>jpeg9: copyright (C) 1991-2022, Thomas G. Lane, Guido Vollbeding. All rights reserved.</li>
+			<li>libwebp: Copyright (C) 2010, Google Inc. All rights reserved.</li>
 		</ul>
 	</li>
+	<li>音声
+		<ul>
+			<li>libvorbis: Copyright (C) 2002-2015, Xiph.org Foundation. All rights reserved.</li>
+			<li>libogg: Copyright (C) 2002, Xiph.org Foundation. All rights reserved.</li>
+		</ul>
+	</li>
+	<li>フォント
+		<ul>
+			<li>FreeType2: Copyright (C) 1996-2002, 2006 by David Turner, Robert Wilhelm, and Werner Lemberg. All rights reserved.</li>
+		</ul>
+	</li>
+	<li>圧縮用の依存ライブラリ (それぞれlibpng/libwebp/FreeType2での利用)
+		<ul>
+			<li>zlib: Copyright (C) 1995-2013 Jean-loup Gailly and Mark Adler. All rights reserved.</li>
+			<li>bzip2: Copyright (C) 1996-2010 Julian R Seward. All rights reserved.</li>
+			<li>Brotli: Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors. All rights reserved.</li>
+		</ul>
+	</li>
+	<li>Unityエクスポートに限り、Unityを使用 (家庭用ゲーム機専用)</li>
 </ul>
 
 <br>
