--- a/web/index.html
+++ b/web/index.html
@@ -305,10 +305,11 @@
 <h2 class="spacer">ユーザーサポート</h2>
 <p>
 	有志によるDiscordユーザーコミュニティーがあります。初心者でも気軽に質問できます。<br>
-	<a class="btn btn-primary mb-3" href="https://discord.gg/Xh9mFwr4E8">ユーザーコミュニティーに参加</a>
+	<a class="btn btn-primary mb-3" href="https://discord.gg/Xh9mFwr4E8">ユーザーコミュニティーに参加</a><br>
+	コア開発者チームも参加しておりますので、気軽にご要望などを言っていただけますとうれしいです。
 </p>
 <p>
-	SNSでは、<a href="https://twitter.com/">X</a>	でハッシュタグ <code>#PolarisEngine</code> を付けてポストしていただくことで、見つけ次第リプライします。<br>
+	SNSでは、<a href="https://twitter.com/">X</a>	で Polaris Engine のキーワードを入れてポストしていただくことで、見つけ次第リプライしています。<br>
 	腕に自身のある方は、GitHubでご連絡ください。
 </p>
 
@@ -316,9 +317,16 @@
 
 <h2 class="spacer">誰が作っているの？</h2>
 <ul class="alert alert-info">
-	<li>コア開発者チームは、ユーザーコミュニティーとは別に活動しています</li>
 	<li>プログラム本体は <a href="https://github.com/ktabata">ktabata</a> が書いています</li>
 	<li>プロジェクトを支える公式素材や新規仕様は、コア開発チームのクリエイタ陣が作っています</li>
+	<li>Polaris Engineのコア開発者は下記のとおりですので、ユーザーコミュニティーで探して気軽に話しかけていただければうれしいです:
+		<ul>
+			<li>開発リーダー ktabata</li>
+			<li>コア開発者 あさつき</li>
+			<li>コア開発者 SOrow</li>
+			<li>コア開発者 MATSUNO Seiji</li>
+		</ul>
+	</li>
 </ul>
 
 <!-- ------------------------- -->
