--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -118,9 +118,9 @@
 <hr>
 <br>
 
-<h4>謝辞 (Special Thanks)</h4>
+<h4>謝辞 (Acknowledgements)</h4>
 <p>
-	テンプレートゲームの開発においては、プロ・アマチュアを問わず、才能にあふれた素晴しいクリエイタの皆様にご参加いただいております。ここに深謝の意を表します。(順不同・敬称略)
+	開発においては、プロ・アマチュアを問わず、才能にあふれる素晴しいクリエイタの皆様にご参加いただいております。すべての貢献者に対して、ここに深謝の意を表します。(順不同・敬称略)
 </p>
 <ul>
 	<li>テンプレートゲーム
@@ -137,7 +137,7 @@
 	<li>声の出演
 		<ul>
 			<li>日本語: しぐれるぅ。 (@sigureruu)</li>
-			<li>英語: カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
+			<li>英語: NHKラジオ基礎英語シリーズ カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
 		</ul>
 	</li>
 	<li>音楽
@@ -153,6 +153,16 @@
 	<li>アイコン
 		<ul>
 			<li>龍龍(Ronron) (@RonronAmethyst)</li>
+		</ul>
+	</li>
+	<li>GUI機能の設計
+		<ul>
+			<li>MaxMorgan</li>
+		</ul>
+	</li>
+	<li>初期の機能検討
+		<ul>
+			<li>マイマイ</li>
 		</ul>
 	</li>
 </ul>
