--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.18 (2024/4/27):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.18.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.18.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.19 (2024/4/27):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.19.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.19.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -369,6 +369,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.19 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.18 2024/4/27 <ul> <li>日本語ライト・ダークの微修正</li> <li>アニメファイルでaccel:プロパティを強化 (normal,accel,brakeを指定可能)</li> </ul> </li>
 <li>Polaris Engine 1.1.17 2024/4/26 <ul> <li>ヒストリーが表示されないバグを修正 (GUIからのgosub機能を追加した際のデグレード)</li> </ul> </li>
 <li>Polaris Engine 1.1.16 2024/4/25 <ul> <li>newsコマンドを修正</li> </ul> </li>
