--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -370,6 +370,7 @@
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
+<li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.19 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.18 2024/4/27 <ul> <li>日本語ライト・ダークの微修正</li> <li>アニメファイルでaccel:プロパティを強化 (normal,accel,brakeを指定可能)</li> </ul> </li>
 <li>Polaris Engine 1.1.17 2024/4/26 <ul> <li>ヒストリーが表示されないバグを修正 (GUIからのgosub機能を追加した際のデグレード)</li> </ul> </li>
