--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -248,6 +248,7 @@
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
+<li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.19 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.18 2024/4/27 <ul> <li>Slightly fixed the Japanese light and dark templates</li> <li>Improved the accel: property of anime files (normal,accel,brake)</li> </ul> </li>
 <li>Polaris Engine 1.1.17 2024/4/26 <ul> <li>Fixed a degrade bug where history cannot be shown</li> </ul> </li>
