--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.20 (2024/4/27):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.20.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.20.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.1.21 (2024/4/27):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.21.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.21.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.21 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.19 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
