--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.22 (2024/4/28):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.22.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.22.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.23 (2024/5/1):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.23.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.23.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -369,6 +369,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Android版の修正</li> </ul> </li>
 <li>Polaris Engine 1.1.22 2024/4/28 <ul> <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.1.21 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
