pro-android: fixed

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -110,6 +110,8 @@
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.24.exe">Windows版 Polaris Engine</a><br>
 <!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.24.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
+<a href="/dl/polaris-engine.apk">Android版 Polaris Engine</a><br>
+iOS版 Polaris Engine (ストア公開の調整中)<br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
 </p>
