--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.1.24 (2024/5/1):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.1.24.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.1.24.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.0 (2024/5/2):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.0.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.0.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <a href="/dl/polaris-engine.apk">Android版 Polaris Engine</a><br>
 iOS版 Polaris Engine (ストア公開の調整中)<br>
@@ -371,6 +371,7 @@ iOS版 Polaris Engine (ストア公開の調整中)<br>
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.0 2024/5/2 <ul> <li>Unity対応の最初のアルファ版</li> </ul> </li>
 <li>Polaris Engine 1.1.24 2024/5/1 <ul> <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li> </ul> </li>
 <li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Android版の修正</li> </ul> </li>
 <li>Polaris Engine 1.1.22 2024/4/28 <ul> <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li> </ul> </li>
