Added Unity aarch64 DLL

--- a/web/index.html
+++ b/web/index.html
@@ -112,11 +112,10 @@
 	<li>Polaris Engineはノベルアプリを制作するためのツールです</li>
 	<li>ノベルアプリとは小説をベースにイラストやサウンドで演出を行うスマートホン向けの創作ジャンルのことです</li>
 	<li>Polaris Engineを使って制作された作品はAppleとGoogleのスマホアプリストアに展開されています</li>
-	<li>Polaris Engineの開発ツールは現在、Apple, Google, Microsoftとの契約の下で各公式ストアにて正式リリースされています</li>
-	<li>Polaris Engineは家庭用ゲーム機でもそのまま動作します</li>
+	<li>Polaris EngineはUnityのプロジェクトを出力できるので、家庭用ゲーム機でそのまま動作します</li>
 	<li>Polaris Engineはどなたでもご利用いただける無料ソフトで、将来的にも有償化ができないライセンスで提供されています</li>
 	<li>Polaris Engineを使えば、まだゲームやアプリの作り方を知らない方でも、簡単に取り組むことができます</li>
-	<li>2024年4月現在、Polaris Engineを使ってノベルアプリを作ることは、実力で商業クリエイタになる最短パスです</li>
+	<li>2024年5月現在、Polaris Engineを使ってノベルアプリを作ることは、実力で商業クリエイタになる最短パスです</li>
 	<li>まずはフリーゲームを制作してみませんか？<a href="https://freem.ne.jp/">ふりーむ！</a>様の審査をクリアできれば、商業ストア審査もクリアできます</li>
 </ul>
 
@@ -126,7 +125,7 @@
 
 <h2 class="spacer">Polaris Engineの特徴</h2>
 <ul>
-	<li>強力な開発環境があり、予算に合わせて、Windows, Mac, iPhone, iPad, Android, Chromebook, Linux, Webで開発可能</li>
+	<li>強力な開発環境があり、予算に合わせて、Windows, Mac, iPhone, iPad, Android, Chromebook, Linuxで開発可能</li>
 	<li>iPhoneアプリ, Androidアプリ, Windowsアプリ, Webアプリなどの出力が1クリックで可能、しかも多言語対応</li>
 	<li>ゲーム開発への入門に最適で、覚えることはUnityの10000分の1以下</li>
 	<li>視覚的操作しかできないノーコードツールとは異なり、実用的で効率的に、しかも簡単に開発できる</li>
