--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -105,9 +105,9 @@
 <br>
 <h4>ダウンロード</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.3 (2024/5/5):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.3.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.3.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.4 (2024/5/5):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.4.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.4.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -372,6 +372,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.4 2024/5/5 <ul> <li>Windows版Android Studioでのビルドの改善</li> </ul> </li>
 <li>Polaris Engine 1.2.3 2024/5/5 <ul> <li>GUI機能で右クリックキャンセルした際にgosub-backボタンがあればその動作をするように変更</li> <li>MacでのAndroidビルドの問題を修正</li> </ul> </li>
 <li>Polaris Engine 1.2.2 2024/5/5 <ul> <li>GUI機能のバグ修正</li> </ul> </li>
 <li>Polaris Engine 1.2.1 2024/5/3 <ul> <li>game-nosign.exeを追加</li> </ul> </li>
