--- a/web/index.html
+++ b/web/index.html
@@ -327,16 +327,9 @@
 
 <h2 class="spacer">誰が作っているの？</h2>
 <ul class="alert alert-info">
-	<li>プログラム本体は <a href="https://github.com/ktabata">ktabata</a> が書いています</li>
+	<li>プログラム本体は <a href="https://www.facebook.com/tabata.keiichi/?locale=ja_JP">ktabata</a> が書いています</li>
 	<li>プロジェクトを支える公式素材や新規仕様は、コア開発チームのクリエイタ陣が作っています</li>
-	<li>Polaris Engineのコア開発者は下記のとおりですので、ユーザーコミュニティーで探して気軽に話しかけていただければうれしいです:
-		<ul>
-			<li>開発リーダー ktabata</li>
-			<li>コア開発者 あさつき</li>
-			<li>コア開発者 SOrow</li>
-			<li>コア開発者 MATSUNO Seiji</li>
-		</ul>
-	</li>
+	<li>Polaris Engineのコア開発者はユーザーコミュニティーサーバーにおりますので、気軽に話しかけていただければうれしいです</li>
 </ul>
 
 <!-- ------------------------- -->
