--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -105,6 +105,7 @@
 <br>
 <h4>ダウンロード</h4>
 <p>
+<!-- ※ここはリリース時に自動で更新されます -->
 <!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.4 (2024/5/5):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.4.exe">Windows版 Polaris Engine</a><br>
 <!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.4.dmg">Mac版 Polaris Engine</a><br>
@@ -128,47 +129,61 @@
 <ul>
 	<li>テンプレートゲーム
 		<ul>
-			<li>Polaris Engine コア開発者 あさつき (@ootukasegoka)</li>
-			<li>Polaris Engine コア開発者 SOrow (@sorow_fts)</li>
+			<li>日本語ライト・ダーク: ゲームクリエイタ/SOrow</li>
+			<li>日本語縦書き: ゲームクリエイタ/あさつき</li>
 		</ul>
 	</li>
 	<li>キャラクタデザイン
 		<ul>
-			<li>ぽにこ (@gigzagu123)</li>
+			<li>みどり: イラストレータ/ぽにこ (@gigzagu123)</li>
 		</ul>
 	</li>
 	<li>声の出演
 		<ul>
-			<li>日本語: しぐれるぅ。 (@sigureruu)</li>
-			<li>英語: NHKラジオ基礎英語シリーズ カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
+			<li>日本語: 声優/しぐれるぅ。 (@sigureruu)</li>
+			<li>英語: NHKラジオ基礎英語/カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
+		</ul>
+	</li>
+	<li>背景
+		<ul>
+			<li>ゲームクリエイタ/つる</li>
 		</ul>
 	</li>
 	<li>音楽
 		<ul>
-			<li>80</li>
+			<li>制作ディレクタ/80</li>
 		</ul>
 	</li>
-	<li>エフェクト
+	<li>エフェクトとルール画像
 		<ul>
-			<li>Polaris Engine コア開発者 SOrow (@sorow_fts)</li>
+			<li>ゲームクリエイタ/SOrow</li>
 		</ul>
 	</li>
-	<li>アイコン
+	<li>デフォルトのアイコン
 		<ul>
-			<li>龍龍(Ronron) (@RonronAmethyst)</li>
+			<li>漫画家/龍龍(Ronron) (@RonronAmethyst)</li>
 		</ul>
 	</li>
-	<li>GUI機能の設計
+	<li>名前入力画面の設計
 		<ul>
-			<li>MaxMorgan</li>
+			<li>ゲームクリエイタ/ウビーニ</li>
+			<li>ゲームクリエイタ/あさつき</li>
 		</ul>
 	</li>
-	<li>初期の機能検討
+	<li>初期のGUI機能設計とデザイン
 		<ul>
-			<li>マイマイ</li>
+			<li>デザイナ/MaxMorgan</li>
+		</ul>
+	</li>
+	<li>初期の機能検討とテスト
+		<ul>
+			<li>ゲームクリエイタ/マイマイ</li>
 		</ul>
 	</li>
 </ul>
+<p>
+	最後に、ゲーム制作における専門的な経験と知識をもとに、すべての局面で開発を支え、プログラム開発に協力してくださったことに対し、SOrowさんに特に心から感謝いたします。
+</p>
 
 <h4>利用ライブラリ</h4>
 <p>
@@ -371,6 +386,7 @@
 		<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
 			<div class="accordion-body">
         <ul>
+<!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
 <li>Polaris Engine 1.2.4 2024/5/5 <ul> <li>Windows版Android Studioでのビルドの改善</li> </ul> </li>
 <li>Polaris Engine 1.2.3 2024/5/5 <ul> <li>GUI機能で右クリックキャンセルした際にgosub-backボタンがあればその動作をするように変更</li> <li>MacでのAndroidビルドの問題を修正</li> </ul> </li>
@@ -379,6 +395,18 @@
 <li>Polaris Engine 1.2.0 2024/5/2 <ul> <li>Unity対応の最初のアルファ版</li> </ul> </li>
 <li>Polaris Engine 1.1.24 2024/5/1 <ul> <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li> </ul> </li>
 <li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Android版の修正</li> </ul> </li>
+				</ul>
+      </div>
+			<!-- 以前の更新 -->
+			<div class="accordion-item">
+				<h4 class="accordion-header" id="panelsStayOpen-heading2" style="margin-top: 0;">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+						<span style="font-size: 1.3em;">以前の更新</span>
+					</button>
+				</h4>
+				<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+					<div class="accordion-body">
+						<ul>
 <li>Polaris Engine 1.1.22 2024/4/28 <ul> <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.1.21 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li> </ul> </li>
@@ -420,19 +448,7 @@
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>変数名のバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>コンフィグの誤字を修正</li> </ul> </li>
 <li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> <li>Mac版はまだ含まれていません。</li> </ul> </li>
-				</ul>
-      </div>
-			<!-- 以前の更新 -->
-			<div class="accordion-item">
-				<h4 class="accordion-header" id="panelsStayOpen-heading2" style="margin-top: 0;">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-						<span style="font-size: 1.3em;">以前の更新</span>
-					</button>
-				</h4>
-				<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-					<div class="accordion-body">
-						<ul>
-							<li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Suika2から転生</li> </ul> </li>
+<li>Polaris Engine 0.99.0 2024/4/12 <ul> <li>Suika2から転生</li> </ul> </li>
 						</ul>
 					</div>
 				</div>
