--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.4 (2024/5/5):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.4.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.4.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.5 (2024/5/7):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.5.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.5.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -388,6 +388,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.5 2024/5/7 <ul> <li>口パクに対応</li> <li>AndroidのAPKファイルの自動ビルドに対応</li> </ul> </li>
 <li>Polaris Engine 1.2.4 2024/5/5 <ul> <li>Windows版Android Studioでのビルドの改善</li> </ul> </li>
 <li>Polaris Engine 1.2.3 2024/5/5 <ul> <li>GUI機能で右クリックキャンセルした際にgosub-backボタンがあればその動作をするように変更</li> <li>MacでのAndroidビルドの問題を修正</li> </ul> </li>
 <li>Polaris Engine 1.2.2 2024/5/5 <ul> <li>GUI機能のバグ修正</li> </ul> </li>
