--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.5 (2024/5/7):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.5.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.5.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.6 (2024/5/7):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.6.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.6.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.6 2024/5/7 <ul> <li>Fixed a bug where scale factors become 0</li> <li>Fixed a bug where the click anime remains after messages</li> <li>Fixed the font color on the template games</li> </ul> </li>
 <li>Polaris Engine 1.2.5 2024/5/7 <ul> <li>Added lip-sync</li> <li>Supported automatic build of Android APK on Windows</li> </ul> </li>
 <li>Polaris Engine 1.2.4 2024/5/5 <ul> <li>Fixed a problem on builds on the Windows version of Android Studio</li> </ul> </li>
 <li>Polaris Engine 1.2.3 2024/5/5 <ul> <li>Changed to use a gosub-back button if it exists when right-clicked on a GUI</li> <li>Fixed a problem on builds on the Mac version of Android Studio</li> </ul> </li>
