--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.10 (2024/5/7):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.10.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.10.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.11 (2024/5/7):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.11.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.11.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -388,6 +388,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.11 2024/5/7 <ul> <li>Android自動ビルドの修正</li> </ul> </li>
 <li>Polaris Engine 1.2.10 2024/5/7 <ul> <li>Android自動ビルドの修正</li> </ul> </li>
 <li>Polaris Engine 1.2.9 2024/5/7 <ul> <li>Android自動ビルドの修正</li> </ul> </li>
 <li>Polaris Engine 1.2.8 2024/5/7 <ul> <li>Android自動ビルドの修正</li> </ul> </li>
