--- a/web/index.html
+++ b/web/index.html
@@ -216,12 +216,12 @@
 	<div class="col-md">
 		<h2>iOS版ゲーム</h2>
 		<p>
-			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Appleから提供されているXcodeでビルドできます。<br>
-			ご自身のiPhone, iPadに転送するだけでしたら、Mac本体とApple Developer Programアカウントさえあれば審査は不要で、作業は10分もかかりません。<br>
-			iOS向けに配信を行うことで、iPhoneとiPadだけでなく、2020年以降のモデルのMacや、Apple Vision Proにも配信できます。
+			Polaris Engineで作ったゲームは、たったワンクリックでiOSアプリのIPAファイルに変換できます。<br>
+			インストールはAirDropでIPAファイルを送るだけ。ストア審査なしで即売会でも配布できます。<br>
+			iPhoneとiPadだけでなく、日本未発売のApple Vision Proにも対応しています。
 		</p>
 		<p>
-			App Storeでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			App Storeでの有償/無償の公開も可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -229,12 +229,12 @@
 	<div class="col-md">
 		<h2>Android版ゲーム</h2>
 		<p>
-			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Googleから提供されているAndroid Studioでビルドできます。<br>
-			ご自身のAndroidスマホに転送するだけでしたら、登録や審査は不要で、作業には10分もかかりません。<br>
-			Playストアで配信したAndroidアプリは、Chromebookにも配信されます。Android TVにも配信できます。
+			Polaris Engineで作ったゲームは、たったワンクリックでAndroidアプリのAPKファイルに変換できます。<br>
+			Google Driveでリンクを共有すれば、ストア審査なしでゲームを配布できます。<br>
+			Androidスマホやタブレットだけでなく、ChromebookやAndroid TVにも配信できます。
 		</p>
 		<p>
-			Google Playでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			Google Playでの有償/無償の公開も可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -262,10 +262,11 @@
 	<div class="col-md">
 		<h2>Mac版ゲーム</h2>
 		<p>
-			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Appleから提供されているXcodeでビルドできます。<br>
+			Polaris Engineで作ったゲームは、ワンクリックでMac向けにエクスポートすると、Appleから提供されているXcodeでビルドできます。<br>
 		</p>
 		<p>
-			Mac App Storeでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			DMGファイルでの配布のほか、Mac App Storeでの有償/無償での公開も可能です。
+			良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
@@ -277,8 +278,8 @@
 <ul class="alert alert-info">
   <li>Polaris EngineはMITライセンスの下で <a href="https://github.com/ktabata/polaris-engine">GitHubにて公開</a> されています</li>
   <li>商用/非商用/ジャンル/年齢指定を問わず誰でも無償で自由に利用できます</li>
-  <li>OSSライセンスですので、Polaris Engineの著作権者が、ユーザによるゲームの用途を限定することが、そもそも禁止されています</li>
-  <li>MITライセンスですので、ソースコード非公開の企業利用が可能であり、現に商用モーション技術を採用したバージョンがあります</li>
+  <li>MITライセンスですので、Polaris Engineの著作権者が、ユーザによるゲームの用途を限定することが、そもそも禁止されています</li>
+  <li>改変後のソースコードを非公開にした企業利用が可能であり、現に商用モーション技術を採用したバージョンが存在します</li>
 </ul>
 
 <!-- ------------------------- -->
@@ -297,8 +298,8 @@
 	<li>2023年12月 App Store, Mac App Store, Google Play Store, Microsoft Store, Ubuntu PPA で開発ツールを公開</li>
   <li>2024年01月 <a href="/award2024.html">Suika2ノベルアプリ大賞2024</a>を開催</li>
   <li>2024年03月 軽量で高品質なエフェクトの拡充、プロ仕様ソフトとして他エンジンの置き換えを開始</li>
-  <li>2024年04月 Polaris Engineへの移行</li>
-  <li>2024年05月 Unityエクスポートの追加で家庭用ゲーム機に対応</li>
+  <li>2024年04月 Polaris Engineに改称</li>
+  <li>2024年05月 Unityエクスポートの追加で家庭用ゲーム機に対応 (ネイティブDLL併用、C#変換へ移行予定)</li>
 </ul>
 
 <!-- ------------------------- -->
