--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.17 (2024/5/8):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.17.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.17.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.18 (2024/5/8):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.18.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.18.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -388,6 +388,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.18 2024/5/8 <ul> <li>シナリオを開くボタンとメニューを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.17 2024/5/8 <ul> <li>シナリオ保存のバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.16 2024/5/8 <ul> <li>マスターボリュームのバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.15 2024/5/8 <ul> <li>既読フラグの管理を改善</li> </ul> </li>
