--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.17 (2024/5/8):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.17.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.17.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.18 (2024/5/8):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.18.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.18.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.18 2024/5/8 <ul> <li>Fixed the button and menu of Open Scenario</li> </ul> </li>
 <li>Polaris Engine 1.2.17 2024/5/8 <ul> <li>Fixed a bug of scenario save</li> </ul> </li>
 <li>Polaris Engine 1.2.16 2024/5/8 <ul> <li>Fixed a bug of the master volume</li> </ul> </li>
 <li>Polaris Engine 1.2.15 2024/5/8 <ul> <li>Improved the seen flag management</li> </ul> </li>
