--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.19 (2024/5/9):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.19.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.19.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.20 (2024/5/9):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.20.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.20.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -412,6 +412,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.20 2024/5/9 <ul> <li>ファイル選択のキャンセル時にシナリオが再ロードされるバグを修正</li> <li>Shift+EnterとEnterの挙動を入れ替え</li> </ul> </li>
 <li>Polaris Engine 1.2.19 2024/5/9 <ul> <li>シナリオ末尾がラベル等のときのチラつきを抑制</li> </ul> </li>
 <li>Polaris Engine 1.2.18 2024/5/8 <ul> <li>シナリオを開くボタンとメニューを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.17 2024/5/8 <ul> <li>シナリオ保存のバグを修正</li> </ul> </li>
