--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -247,7 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
-<li>Polaris Engine 1.2.31 2024/5/10 <ul <li>Associated the .polaris file name extension</li> </ul> </li>
+<li>Polaris Engine 1.2.31 2024/5/10 <ul> <li>Associated the .polaris file name extension</li> </ul> </li>
 <li>Polaris Engine 1.2.30 2024/5/10 <ul> <li>Fixed a problem that Polaris Engine forgets the last opened project folder on update install</li> </ul> </li>
 <li>Polaris Engine 1.2.29 2024/5/10 <ul> <li>Changed to update a script model when a change to Look&Feel or command insertion</li> </ul> </li>
 <li>Polaris Engine 1.2.28 2024/5/10 <ul> <li>Changed to open dialog at the last project folder</li> </ul> </li>
@@ -280,6 +280,19 @@
 <li>Polaris Engine 1.2.0 2024/5/2 <ul> <li>The first public alpha version of Unity support</li> </ul> </li>
 <li>Polaris Engine 1.1.24 2024/5/1 <ul> <li>Updated libpng from 1.6.35 to 1.6.43 (for cmake on Android NDK)</li> </ul> </li>
 <li>Polaris Engine 1.1.23 2024/5/1 <ul> <li>Fixed the Android export</li> </ul> </li>
+			</div>
+		</div>
+  </div>
+  <!-- Past Releases -->
+	<div class="accordion-item">
+		<h4 class="accordion-header" id="panelsStayOpen-heading2" style="margin-top: 0;">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+				<span style="font-size: 1.3em;">Older Releases</span>
+			</button>
+		</h4>
+		<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+			<div class="accordion-body">
+        <ul>
 <li>Polaris Engine 1.1.22 2024/4/28 <ul> <li>Fixed a bug where calling a custom GUI from SysMenu causes a flicker</li> </ul> </li>
 <li>Polaris Engine 1.1.21 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
 <li>Polaris Engine 1.1.20 2024/4/27 <ul> <li>Fixed a bug where the Ciel system cannot restore the character count</li> </ul> </li>
@@ -322,20 +335,6 @@
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>Fixed a bug of names of variables</li> </ul> </li>
 <li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>Fixed typo in config.txt</li> </ul> </li>
 <li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0 (without Mac version)</li> </ul> </li>
-			</div>
-		</div>
-  </div>
-  <!-- Past Releases -->
-	<div class="accordion-item">
-		<h4 class="accordion-header" id="panelsStayOpen-heading2" style="margin-top: 0;">
-			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-				<span style="font-size: 1.3em;">Older Releases</span>
-			</button>
-		</h4>
-		<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			<div class="accordion-body">
-        <ul>
-					<li>none</li>
         </ul>
 			</div>
 		</div>
