--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.38 (2024/5/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.38.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.38.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.39 (2024/5/12):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.39.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.39.dmg">Mac版 Polaris Engine</a><br>
 <a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -428,6 +428,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.39 2024/5/12 <ul> <li>IPAとAPKの自動ビルドを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.38 2024/5/12 <ul> <li>Android APKビルドの修正</li> </ul> </li>
 <li>Polaris Engine 1.2.37 2024/5/12 <ul> <li>ソローさんが日本語ノベルと英語ノベルのテンプレートを刷新</li> </ul> </li>
 <li>Polaris Engine 1.2.36 2024/5/11 <ul> <li>キャラの目パチと口パクの画像を改善</li> </ul> </li>
